# simulation-labs

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEMO_PLAYBOOK.md  Dockerfile  GO_TO_MARKET.md  LICENSE  PHASE1_SPEC.md  PHASE2_SPEC.md  PHASE3_SPEC.md  PHASE4_SPEC.md  PHASE5_SPEC.md  PRODUCTION_PLAN.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  WAVE_0_A_SPEC.md  WAVE_1_SPEC.md  WAVE_2_SPEC.md  action.yml  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  run.sh  sim.demo.yml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  pages.yml  simulate.yml
.sim-demo/: report.json
.sim-demo/b089ac6aa5a7/: insights.json  report.html
.sim-live/: report.json
.sim-live/0a5cea019903/: insights.json  report.html
.sim-seg/: report.json
.sim-seg/cb6d6b4551a9/: insights.json  report.html
agents/: AGENT_1_engine.md  AGENT_2_runner.md  AGENT_3_orchestrator.md  AGENT_4_frontend.md  AGENT_5_voice_report.md
bench/: RESULTS.md  _common.py  efficacy.py  efficacy_oracle.py  latency.py  recall_quality.py  scaling.py
bench/results/: efficacy_oracle_power-user.json  efficacy_power-user.json  latency.json  recall_quality.json  scaling.json
benchmarks/: __init__.py  b_a1_localization.py  b_a2_tremor_wcag.py  b_a3_invariants.py  b_b_survival.py  b_c2_throughput.py  b_c3_overhead.py  b_d1_classifiers.py  common.py  load_test.py  run_all.py
benchmarks/pages/: easy_form.html
benchmarks/results/: a1_localization.json  a2_tremor_wcag.json  a3_invariants.json  b_survival.json  c2_throughput.json  c3_overhead.json  d1_classifiers.json  report.html
deploy/vllm/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  BRANCHES.md  CONTRACTS.md  README.md  SELF_HOSTING.md  api-reference.md  billing-ops.md  ci.md  data-policy.md  deploy-runbook.md  deploy.md  dpa-template.md  incident-response.md  index.md  migrations.md  onboarding-cohort-01.md  onboarding-research.md  oncall-runbook.md  scaling.md  security-audit.md  security-disclosure.md  slos.md  soc2-readiness.md  status.md  testing.md
docs/branches/: REPEATED_BATHROOM.md
docs/gtm/: DEMO_RUN.md  VIDEO_EDIT_SCRIPT.md  apollo-targeting.md  cold-email-sequence.md  hackathon-win-playbook.md  launch-week-plan.md  partner-outreach.md
docs/modules/: ENGINE.md  RUNNER.md  SERVER.md  VOICE_REPORT.md  WEB.md
fixtures/: demo_signup.html  hostile_form.html  hostile_form_fixed.html  payment_form.html
landing-page/: docs.html  index.html  llms.txt  note-mechanical-fidelity.html  note-perturbation-invariants.html  note-tremor-targets.html  poster.html  product.html  research.html  robots.txt  site.js  sitemap.xml  styles.css  vision.html
landing-page/.well-known/: security.txt
landing-page/demo/: index.html
landing-page/sample-report/: index.html  mobile-thumb.webm
migrations/: env.py  script.py.mako
migrations/versions/: 0b2fc46c1a86_initial_schema.py
ops/: alerts.yml  backup.sh  observability.py  restore.sh  retention.py
personas/: .gitkeep  ai-agent.json  colorblind.json  first-timer.json  fluent.json  grandma-72.json  impatient-mobile.json  low-vision.json  misclick-prone.json  mobile-thumb.json  non-native.json  power-user.json  rushed.json  tremor.json
personas/_advanced/: colorblind.json  grandma-72.json  power-user.json
policies/: ghostpanel-browse-only.yaml
shared/ghostpanel_contracts/: __init__.py  contracts.py
src/ghostpanel/: __init__.py  app.py
src/ghostpanel/auth/: apikeys.py  artifact_tokens.py  deps.py  passwords.py  ratelimit.py  tokens.py
src/ghostpanel/benchmarks/: __init__.py  __main__.py  harness.py
src/ghostpanel/billing/: entitlements.py  reconcile.py  stripe_client.py  usage.py
src/ghostpanel/cli/: __init__.py  __main__.py  ci_output.py  config.py  demo_flow.py  driver.py  exit_codes.py  main.py  preflight.py  recorded_demo.py  regression.py  render.py  replay.py  safety.py
src/ghostpanel/engine/: __init__.py  gemini_client.py  holo_client.py  persona_agent.py  personas.py  perturbation.py  prompts.py  selfhost_client.py
src/ghostpanel/jobs/: queue.py  reliability.py  scheduler.py  worker.py
src/ghostpanel/memory/: __init__.py  distill.py  store.py  supermemory_store.py
tests/: test_contracts.py
tests/auth/: test_auth.py  test_hardening.py
tests/benchmarks/: test_harness.py
tests/billing/: conftest.py  test_billing_api.py  test_entitlements.py  test_reconcile.py  test_stripe_client.py  test_usage.py
tests/cli/: test_ci_output.py  test_cli_main.py  test_config.py  test_preflight.py  test_regression.py  test_replay.py  test_safety.py  test_try_onboarding.py
tests/e2e/: test_hosted_flow.py
tests/engine/: grounding_eval.py  test_grounding_eval.py  test_holo_client.py  test_holo_errors.py  test_live_smoke.py  test_parse_repair.py  test_persona_agent.py  test_personas.py  test_perturbation.py  test_registry.py
tests/jobs/: conftest.py  test_queue.py  test_reliability.py  test_scheduler.py
tests/memory/: conftest.py  test_distill.py  test_supermemory_store.py  test_tags.py
tests/report/: conftest.py  test_builder.py  test_deliverable.py  test_heatmap.py  test_html_report.py  test_insights.py
tests/runner/: conftest.py  test_detect.py  test_execute.py  test_policy.py  test_session.py
tests/server/: server_stubs.py  test_api.py  test_memory.py  test_policy_index.py  test_sponsor_features.py  test_swarm.py
tests/server_v2/: test_api.py  test_artifacts.py  test_metrics.py  test_middleware.py  test_ssrf_gate.py
tests/store/: conftest.py  test_repo.py
tests/voice/: conftest.py  test_gradium_voice.py  test_narrate.py  test_narrate_cli.py  test_wav_header.py
web/: .env.example  .gitignore  .gitkeep  DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/.grok/: config.toml
web/coverage/: coverage-summary.json
web/src/: App.tsx  api.ts  insights.ts  main.tsx  offline.ts  personaCatalog.ts  runReducer.ts  styles.css  theme.ts  types.ts  useRunStream.ts  wav.ts
(+94 files in other folders)
