[project]
name = "ghostpanel"
version = "0.1.0"
description = "Ghostpanel — behavioral synthetic users powered by H Company Holo. Personas that DO, not say."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# ---------------------------------------------------------------------------
# ALL runtime dependencies for ALL five agents are declared here up front.
# This file is part of the frozen skeleton — NO agent should edit it, so that
# five parallel branches never conflict on dependency lists. If you genuinely
# need a new dependency, raise it with the orchestrator (Agent 3).
# ---------------------------------------------------------------------------
dependencies = [
    # --- Engine (Agent 1): Holo Models API + perception/actuation perturbation ---
    "openai>=1.40",           # Holo is OpenAI-compatible (base_url swap)
    "pillow>=10.3",           # gaussian blur, downscale-in-place
    "daltonlens>=0.1.5",      # physiologically accurate colour-vision-deficiency sim
    "numpy>=1.26",            # coordinate jitter, heatmap math
    # --- Runner (Agent 2): real browser control + video receipts ---
    "playwright>=1.45",       # page.mouse.click(x, y) == Holo's pixel output space
    # --- Orchestrator / server (Agent 3) ---
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    # --- Voice + report (Agent 5) ---
    "gradium>=0.1.0",         # Gradium official Python SDK (TTS/STT/voice clone)
    "anthropic>=0.34",        # Claude turns an action-trace into a first-person exit interview
    "jinja2>=3.1",            # standalone HTML report artifact
    # --- shared ---
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",            # persona configs / NemoClaw policy (optional stretch)
    # --- hosted product (Phase 2+): persistence, auth, storage, billing ---
    "sqlmodel>=0.0.39",       # ORM models + async SQLAlchemy 2.x
    "aiosqlite>=0.20",        # async SQLite driver (dev/test)
    "asyncpg>=0.29",          # async Postgres driver (prod)
    "PyJWT>=2.8",             # session tokens
    "bcrypt>=4.1",            # password hashing
    "stripe>=9.0",            # billing (Phase 4; test-mode until real keys)
    "boto3>=1.34",            # S3-compatible artifact storage (optional backend)
    "alembic>=1.13",          # schema migrations (prod; create_all is dev-only)
    "psycopg[binary]>=3",     # sync Postgres driver for Alembic (app uses asyncpg)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pytest-cov>=5",
]

[tool.coverage.run]
source = ["ghostpanel"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[project.scripts]
ghostpanel = "ghostpanel.server.main:main"
sim = "ghostpanel.cli.main:main"
ghostpanel-worker = "ghostpanel.jobs.worker:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Two source roots: application code in src/, the frozen contracts in shared/.
[tool.setuptools.packages.find]
where = ["src", "shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "shared"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
